--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
+    "ember-browserify": "^1.2.2",
     "ember-cli": "~3.12.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
@@ -48,5 +49,17 @@
   },
   "engines": {
     "node": "8.* || >= 10.*"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "he": "^1.2.0",
+    "pusher": "^2.2.2",
+    "pusher-js": "^5.0.1",
+    "sentiment": "^5.0.2",
+    "strftime": "^0.10.0"
   }
 }
